feat: improve S3 sink connector integration, configuration, and tooling
- Refactor S3SinkConnectorExample for better configuration handling and Java 17 compatibility
- Enhance S3 integration with additional configs and safety settings
- Add CSV sink support using Jackson encoder
- Introduce format.json for configuration
- Clean up pom.xml by removing unused S3 dependencies
- Update .gitignore to include minio_data
- Add helper scripts (build/upload and remove-all-jobs.sh) for Flink job management
- Improve README with clearer setup, configuration, JVM args, and helper scripts documentation